--- a/angular-scroll-and-view-animations/src/app/components/section-one/section-one.component.html
+++ b/angular-scroll-and-view-animations/src/app/components/section-one/section-one.component.html
@@ -1,4 +1,4 @@
-<section id="section-one">
+<section>
   <div>
     <h1 #targetElement [@scrollAnimation]="animationState">Hello, World!</h1>
   </div>
