--- a/angular-scroll-and-view-animations/src/styles.scss
+++ b/angular-scroll-and-view-animations/src/styles.scss
@@ -23,3 +23,12 @@ section {
     text-align: center;
   }
 }
+
+::-webkit-scrollbar {
+  background-color: #2e293a;
+  width: 3px;
+}
+
+::-webkit-scrollbar-thumb { 
+  background-color: white;
+}
